--- a/Day_002_HW.ipynb
+++ b/Day_002_HW.ipynb
@@ -15,9 +15,15 @@
     "## [作業重點]\n",
     "\n",
     "透過瞭解機器學習的運作方式，找出非常適用機器學習應用的領域及其原因。\n",
-    "    - [人工智慧](https://zh.wikipedia.org/wiki/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD)\n",
-    "    - [機器學習](https://zh.wikipedia.org/zh-hk/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0)\n",
-    "    - [深度學習](https://zh.wikipedia.org/wiki/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0)"
+    "\n",
+    "\n",
+    "[人工智慧](https://zh.wikipedia.org/wiki/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD)\n",
+    "\n",
+    "\n",
+    "[機器學習](https://zh.wikipedia.org/zh-hk/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0)\n",
+    "\n",
+    "\n",
+    "[深度學習](https://zh.wikipedia.org/wiki/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0)"
    ]
   },
   {
@@ -27,7 +33,7 @@
     "## 作業\n",
     "請找出一個你認為機器學習可以發光發熱的領域並闡述原因? \n",
     "\n",
-    "    - 任何人力繁重且工作性質高度重複的工作"
+    "    - FinTech, no reason."
    ]
   }
  ],
