--- a/Day_003_HW.ipynb
+++ b/Day_003_HW.ipynb
@@ -57,15 +57,22 @@
    "metadata": {},
    "source": [
     "# [The role of social media, mentors and finance among women small business owners](https://research.fb.com/blog/2019/03/the-role-of-social-media-mentors-and-finance-among-women-small-business-owners/)\n",
-    "# Goal\n",
+    "## Goal\n",
     "   - survey of small and medium businesses (SMBs) on Facebook around the world.\n",
-    "# Technology\n",
+    "## Technology\n",
     "   - Seaborn and Matplotlib for data visualization\n",
     "   - descriptive statistics\n",
-    "# Source\n",
+    "## Source\n",
     "   - Facebook Research blog\n",
     "   - [World Bank Open data portal](https://datacatalog.worldbank.org/dataset/future-business-survey-aggregated-data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
